fixed mentors cards spacing issue and titles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,10 +196,6 @@ button {
   cursor: po;
 }
 
-.instructor-row .col-lg-3 {
-  width: 20%;
-}
-
 .overview .overview__single {
   cursor: pointer;
 }
@@ -10636,4 +10632,10 @@ span {
 .icon-image {
   height: 2rem; /* equivalent to h-8 */
   width: 2rem;  /* equivalent to w-8 */
+}
+
+@media only screen and (min-width: 1200px) {
+  .instructor-row .col-lg-3 {
+    width: 20%;
+  }
 }
